--- a/proyectoBiblioteca/src/main/resources/application.properties
+++ b/proyectoBiblioteca/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=proyectoBiblioteca
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_biblioteca
-spring.datasource.username=postgres
-spring.datasource.password=JCF123
-spring.jpa.show-sql=true 
-spring.jpa.generate-ddl=true 
+server.port=8080
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/db_biblioteca}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:123}
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework.security=DEBUG 
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.open-in-view=false
+
+app.security.jwt.secret=${JWT_SECRET:mario2025ClaveSeguraSimple12345789!}
+app.security.jwt.expiration-minutes=${JWT_EXP_MINUTES:120}
