--- a/proyectoBiblioteca/src/main/resources/application.properties
+++ b/proyectoBiblioteca/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=proyectoBiblioteca
 server.port=8080
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/db_biblioteca}
 spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:JCF123}
+spring.datasource.password=${DB_PASSWORD:123}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
